# daimon

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/: doc-health.md
docs/adr/: 001-rust-to-cyrius-port.md  002-synchronous-http.md  003-security-audit-process.md
docs/architecture/: overview.md
docs/audit/: 2026-04-13-security-audit.md  2026-04-27-sandhi-migration.md
docs/development/: roadmap.md
docs/development/issues/: 2026-05-10-cyrius-async-aarch64.md  2026-05-10-sandhi-server-max-conns.md  2026-06-11-cyrius-addr-taken-local-array-static-overlap.md  2026-06-11-mcp-registry-aliases-request-buffer.md
docs/development/issues/archive/: 2026-06-11-cyrius-addr-taken-local-array-static-overlap.md  2026-06-11-mcp-manifest-omits-tool-input-schema.md
docs/guides/: api.md  quickstart.md
fuzz/: circuit_breaker.fcyr  mcp_registry.fcyr  memory_keys.fcyr  scheduler_fsm.fcyr  vector_store.fcyr
lib/: async.cyr
rust-old/benches/: benchmarks.rs
rust-old/src/: agent.rs  api.rs  edge.rs  federation.rs  ipc.rs  lib.rs  logging.rs  main.rs  memory.rs  rag.rs  scheduler.rs  screen.rs  supervisor.rs  vector_store.rs
scripts/: bench-history.sh  version-bump.sh
src/: agent.cyr  agent.rs  api.cyr  api.rs  api_agent.cyr  api_edge.cyr  api_mcp.cyr  api_rag.cyr  api_sched.cyr  app.cyr  config.cyr  config.rs  cron.cyr  edge.cyr  edge.rs  error.cyr  error.rs  fed_vector_store.cyr  federation.cyr  federation.rs  firewall.rs  http.cyr  ipc.cyr  ipc.rs  lib.rs  logging.rs  main.cyr  main.rs  mcp.cyr  mcp.rs  memory.cyr  memory.rs  rag.cyr  rag.rs  router.cyr  scheduler.cyr  scheduler.rs  screen.cyr  screen.rs  server.cyr  (+4 more)
tests/: daimon.bcyr  daimon.tcyr  integration.rs  test.sh
