[package]
name = "daimon"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Daimon — AGNOS agent orchestrator, HTTP API, supervisor, and runtime (port 8090)"
homepage = "https://github.com/MacCracken/daimon"
repository = "https://github.com/MacCracken/daimon"
readme = "README.md"
keywords = ["agent", "orchestrator", "runtime", "supervisor", "mcp"]
categories = ["web-programming::http-server", "asynchronous"]
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["logging"]
logging = ["dep:tracing-subscriber"]
sandbox = ["dep:kavach"]
pubsub = ["dep:majra"]
audit = ["dep:libro"]
mcp = ["dep:bote"]
workflow = ["dep:szal"]
gpu = ["dep:ai-hwaccel"]
mcp-security = ["dep:t-ron"]
full = ["logging", "sandbox", "pubsub", "audit", "mcp", "workflow", "gpu", "mcp-security"]

[dependencies]
agnostik = { path = "../agnostik" }
agnosys = { path = "../agnosys" }
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
nix = { version = "0.30", features = ["signal", "process"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Optional dependencies (path = sibling repos; switch to version for release)
ai-hwaccel = { path = "../ai-hwaccel", optional = true }
bote = { path = "../bote", optional = true }
kavach = { path = "../kavach", optional = true }
libro = { path = "../libro", optional = true }
majra = { path = "../majra", optional = true }
szal = { path = "../szal", optional = true }
t-ron = { path = "../t-ron", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "benchmarks"
harness = false
