[package]
name = "daimon"
version = "0.6.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Daimon — AGNOS agent orchestrator, HTTP API, supervisor, and runtime (port 8090)"
homepage = "https://github.com/MacCracken/daimon"
repository = "https://github.com/MacCracken/daimon"
readme = "README.md"
keywords = ["agent", "orchestrator", "runtime", "supervisor", "mcp"]
categories = ["web-programming::http-server", "asynchronous"]
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["logging"]
logging = ["dep:tracing-subscriber"]
http-forward = ["dep:reqwest", "dep:rustls", "dep:hyper-rustls"]
sandbox = ["dep:kavach"]
pubsub = ["dep:majra"]
audit = ["dep:libro"]
mcp = ["dep:bote"]
workflow = ["dep:szal"]
gpu = ["dep:ai-hwaccel"]
mcp-security = ["dep:t-ron"]
firewall = ["dep:nein", "mcp"]
full = ["logging", "http-forward", "sandbox", "pubsub", "audit", "mcp", "workflow", "gpu", "mcp-security", "firewall"]

[dependencies]
agnostik = { path = "../agnostik" }
agnosys = { path = "../agnosys" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
nix = { version = "0.31", features = ["signal", "process"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "http2"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"], optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http1", "http2", "tls12", "native-tokio"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Optional dependencies (published crates)
ai-hwaccel = { version = "0.23.3", optional = true }
bote = { path = "../bote", features = ["host"], optional = true }
kavach = { version = "1.0.1", optional = true }
libro = { version = "0.25.3", optional = true }
majra = { version = "0.26.3", optional = true }
szal = { version = "0.26.3", optional = true }
nein = { version = "0.24", features = ["mcp", "apply", "inspect"], optional = true }
t-ron = { version = "0.22.4", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "benchmarks"
harness = false
